# diff-mppi

./: .gitignore  CHANGELOG.md  LICENSE  LMPPI_IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  debug_warm_start.py  pyproject.toml  requirements.txt  setup.py  test_lmppi.py
diff_mppi/: __init__.py  core.py
diff_mppi/lmppi/: README.md  __init__.py  config.py  controller.py  data.py  models.py  trainer.py  utils.py
docs/: API_REFERENCE.md  CONTRIBUTING.md  EXAMPLES.md  INSTALLATION.md  PROJECT_OVERVIEW.md  README.md  THEORY.md  THEORY_NEW.md  THEORY_OLD.md
examples/: README.md  acados_env.sh  cartpole_acceleration_comparison.py  double_integrator_experiment.py  experiment_log.txt  hyperparameter_sensitivity_study.py  imitation_learning_example.py  lmppi_pendulum_demo.py  lmppi_pendulum_example.py  neural_dynamics_example.py  paper_experiments_reproduction.py  pendulum_example.py  performance_benchmark.py  run_all_experiments.py  step1_collect_data.py  test.py  verify_experiments.py  warm_start_demo.py
examples/accel_mppi/: batch_processing_example.py  imitation_learning_example.py  mpc_warm_start_example.py  pendulum_example.py
examples/lmppi/: LMPPI_SEPARATED_WORKFLOW_GUIDE.md  fixed_lmppi_demo.py  simple_lmppi_demo.py  step2_train_vae.py  step3_test_lmppi.py
examples/quadrotor_nav/: planner_ocp.json
examples/quadrotor_nav/c_generated_code/: Makefile  acados_sim_solver_drone_FrenSer.c  acados_sim_solver_drone_FrenSer.h  acados_solver.pxd  acados_solver_drone_FrenSer.c  acados_solver_drone_FrenSer.h  main_drone_FrenSer.c  main_sim_drone_FrenSer.c
examples/quadrotor_nav/c_generated_code/drone_FrenSer_constraints/: drone_FrenSer_constr_h_e_fun.c  drone_FrenSer_constr_h_e_fun_jac_uxt_zt.c  drone_FrenSer_constr_h_fun.c  drone_FrenSer_constr_h_fun_jac_uxt_zt.c  drone_FrenSer_constraints.h
examples/quadrotor_nav/c_generated_code/drone_FrenSer_cost/: drone_FrenSer_cost.h  drone_FrenSer_cost_y_0_fun.c  drone_FrenSer_cost_y_0_fun_jac_ut_xt.c  drone_FrenSer_cost_y_0_hess.c  drone_FrenSer_cost_y_e_fun.c  drone_FrenSer_cost_y_e_fun_jac_ut_xt.c  drone_FrenSer_cost_y_e_hess.c  drone_FrenSer_cost_y_fun.c  drone_FrenSer_cost_y_fun_jac_ut_xt.c  drone_FrenSer_cost_y_hess.c
examples/quadrotor_nav/c_generated_code/drone_FrenSer_model/: drone_FrenSer_expl_ode_fun.c  drone_FrenSer_expl_vde_adj.c  drone_FrenSer_expl_vde_forw.c  drone_FrenSer_model.h
